--- a/FluToDo/FluToDo/GlobalMessagingLocation.resx
+++ b/FluToDo/FluToDo/GlobalMessagingLocation.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CheckOffAnimation" xml:space="preserve">
+    <value>CheckOffAnimation</value>
+  </data>
+  <data name="CheckOnAnimation" xml:space="preserve">
+    <value>CheckOnAnimation</value>
+  </data>
   <data name="RefreshToDoList" xml:space="preserve">
     <value>RefreshToDoList</value>
   </data>
